--- a/index.html
+++ b/index.html
@@ -1,2 +1,23 @@
-<div>
-  </div>
+<html>
+  <head>
+  </head>
+  <body>
+    <style>
+      .panel {
+		  width:1000px;
+          height:1000px;
+          display: grid;
+          grid-template-columns: 1fr 1fr 1fr;
+        }
+  </style>
+  
+  <div style=""><div class="panel">
+       <div class="theGrid">One</div>
+       <div>Two</div>
+       <div>Three</div>
+       <div>Four</div>
+       <div>Five</div>
+    <div>Six</div><div>Seven</div><div>Five</div><div>Eight</div></div>
+    </div>
+  </body>
+</html>
