--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
           display: grid;
           grid-template-columns: 1fr 1fr 1fr;
         }
-  </style>
+    </style>
   
-  <div style=""><div class="panel">
-       <div class="theGrid">One</div>
-       <div>Two</div>
-       <div>Three</div>
-       <div>Four</div>
-       <div>Five</div>
-    <div>Six</div><div>Seven</div><div>Five</div><div>Eight</div></div>
+    <div style="">
+      <div class="panel">
+        <div class="theGrid">One</div>
+        <div class="theGrid">Two</div>
+        <div class="theGrid">Three</div>
+        <div class="theGrid">Four</div>
+        <div class="theGrid">Five</div>
+        <div class="theGrid">Six</div>
+        <div class="theGrid">Seven</div>
+        <div class="theGrid">Five</div>
+        <div class="theGrid">Eight</div>
+      </div>
     </div>
   </body>
 </html>
