--- a/index.html
+++ b/index.html
@@ -63,6 +63,26 @@
       }
 
     </script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/6.4.2/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#config-web-app -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBGFBCfDcLkB6wA1srUWOVZX2hEzUc_cTI",
+    authDomain: "fireone-fd422.firebaseapp.com",
+    databaseURL: "https://fireone-fd422.firebaseio.com",
+    projectId: "fireone-fd422",
+    storageBucket: "fireone-fd422.appspot.com",
+    messagingSenderId: "284946202344",
+    appId: "1:284946202344:web:30415eecf53f3e2a"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
     <script>
     /*
         document.querySelectorAll(".theGrid").forEach((el) => {
