--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     appId: "1:284946202344:web:30415eecf53f3e2a"
   };
   // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
+  var aa= firebase.initializeApp(firebaseConfig);
 </script>
     <script>
         //firebase text
