--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
      js.src = "https://connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
+    
+    FB.getLoginStatus(function(response) {
+        statusChangeCallback(response);
+    });
 </script>
 </body>
 </html>
