--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     
     FB.getLoginStatus(function(response) {
         statusChangeCallback(response);
+        console.log(response)
     });
 </script>
 </body>
