--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
     
-    FB.getLoginStatus(function(response) {
-        statusChangeCallback(response);
-        console.log(response)
-    });
+//     FB.getLoginStatus(function(response) {
+//         statusChangeCallback(response);
+//         console.log(response)
+//     });
 </script>
 </body>
 </html>
