--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       appId      : '565005824079142',
       cookie     : true,
       xfbml      : true,
-      version    : '6.0'
+      version    : 'v6.0'
     });
       
     FB.AppEvents.logPageView();   
