--- a/index.html
+++ b/index.html
@@ -97,5 +97,9 @@
     
 
 </script>
+<fb:login-button 
+  scope="public_profile,email"
+  onlogin="checkLoginState();">
+</fb:login-button>
 </body>
 </html>
