--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
     
-
+    function checkLoginState() {
+      FB.getLoginStatus(function(response) {
+        statusChangeCallback(response);
+      });
+    }
 </script>
 <fb:login-button 
   scope="public_profile,email"
