--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
      js.src = "https://connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
+    function statusChangeCallback(){
     
+    }
     function checkLoginState() {
       FB.getLoginStatus(function(response) {
         statusChangeCallback(response);
