--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     }
 </script>
 <fb:login-button 
-  scope="public_profile,email,instagram_basic,pages_show_list"
+  scope="instagram_basic,pages_show_list"
   onlogin="checkLoginState();">
 </fb:login-button>
 </body>
