--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<script>
 /*!
  * swiped-events.js - v@version@
  * Pure JavaScript swipe events
@@ -109,7 +110,7 @@
     }
 
 }(window, document));
-
+</script>
 </head>
 <body>
     <template id="theGridTemplate">
