--- a/recole.html
+++ b/recole.html
@@ -317,10 +317,10 @@
         <a class="g-nav-i" item1 href="https://github.com/ethansnow2012/recole">
             Github
         </a>
-        <a class="g-nav-i" item2 href="/dist/recole.html">
+        <a class="g-nav-i" item2 href="/recole.html">
             Demo Cases
         </a>
-        <a class="g-nav-i" item3 href="/dist/recole_guide.html">
+        <a class="g-nav-i" item3 href="/recole_guide.html">
             Getting Start
         </a>
     </div>
