--- a/sorry.html
+++ b/sorry.html
@@ -1,2 +1,9 @@
 抱歉，為了維護原公司權益，不直接提供連結(可於面試時提供)。<br>
 Sorry. For the right of former company, I do not provide the direct links(will provide in interview if needed).
+<br>
+<br>
+<a href='https://www.yourator.co/r/411a2d8e-eae1-4425-ae81-d201a110437b'>
+  Go back.
+</a>
+
+
