--- a/sorry.html
+++ b/sorry.html
@@ -1,8 +1,18 @@
-抱歉，為了維護原公司權益，不直接提供連結(可於面試時提供)。<br>
-Sorry. For the right of former company, I do not provide the direct links(will provide in interview if needed).
 <br>
+<div style="    color: #272631;">
+  抱歉，為了維護原公司權益，不直接提供連結(可於面試時提供)。<br>
+  Sorry. For the right of former company, I do not provide the direct links(will provide in interview if needed).
+</div>
+
 <br>
-<a href='https://www.yourator.co/r/411a2d8e-eae1-4425-ae81-d201a110437b'>
+<a href='https://www.yourator.co/r/411a2d8e-eae1-4425-ae81-d201a110437b' style="    background: #272631;
+color: white;
+border-radius: 7px;
+padding: 7px 13px;
+text-decoration: none;
+display: flex;
+width: max-content;
+align-items: center;">
   Go back.
 </a>
 
