--- a/secrettest_fdgsjh/fbindex.html
+++ b/secrettest_fdgsjh/fbindex.html
@@ -23,7 +23,7 @@
             FB.api(
                 '/107357024199106/feed',
                 'POST',
-                {"message":"sdfasfa"},
+                {"message":"dddddd"},
                 function(response) {
                     // Insert your code here
                 }
