--- a/secrettest_fdgsjh/fbindex.html
+++ b/secrettest_fdgsjh/fbindex.html
@@ -23,7 +23,10 @@
             FB.api(
                 '/107357024199106/feed',
                 'POST',
-                {"message":"dddddd"},
+                {
+                    "message":"dddddd",
+                    "access_token" : "EAAOZA5zEK4OsBAHf8LbykwrOCZB4JDVPPMULtBXnv0KKZAQMvJs0lyspETCe1u9Lo2GW5Qgv6NqE7X0JnZBHtOvvaH28pFrz9xNCWxq59xUZBxPjZBwWKaLZCDo2fxWdhMXlsGav5YLegQnjDIeTPclvGjPXlaTBJHrtrl0dgSNeZCpEq99FsrQdPAzaLNBiIFJPxezJcxx9ZAnIw0gRPX8XterFYrBuhRrlJWqoQRL2REO1t0pUP4cya"
+                },
                 function(response) {
                     // Insert your code here
                 }
