--- a/secrettest_fdgsjh/fbindex.html
+++ b/secrettest_fdgsjh/fbindex.html
@@ -16,7 +16,9 @@
           });
         };
       </script>
-      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v11.0&appId=1013643169423595&autoLogAppEvents=1" nonce="pahTqPLu"></script>
+      <div id="fb-root"></div>
+      <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false"></div>
       <button id='aaa_btn'>aaa</button>
       <script>
           document.querySelector('#aaa_btn').addEventListener('click', ()=>{
@@ -25,13 +27,15 @@
                 'POST',
                 {
                     "message":"dddddd",
-                    "access_token" : "EAAOZA5zEK4OsBAHf8LbykwrOCZB4JDVPPMULtBXnv0KKZAQMvJs0lyspETCe1u9Lo2GW5Qgv6NqE7X0JnZBHtOvvaH28pFrz9xNCWxq59xUZBxPjZBwWKaLZCDo2fxWdhMXlsGav5YLegQnjDIeTPclvGjPXlaTBJHrtrl0dgSNeZCpEq99FsrQdPAzaLNBiIFJPxezJcxx9ZAnIw0gRPX8XterFYrBuhRrlJWqoQRL2REO1t0pUP4cya"
+                    //this token should not be present on client side if this is production env
+                    "access_token" : "EAAOZA5zEK4OsBAJZCIRlzAoW1RDrMjJ2ZBnpXBKxG6dCXcWqAw9q83NUIBfRWwJ96igBPNe06JOrYliq9rsP3sAnZCtui8DXQOqJvopvjUpLfJYTMoWVgApZC3R0JlA73kss1bEZCN9Y5ZAJz8bpsbKBtlASpyLMJy1ogRNzZB9AnSxZAZB4XMeekk2t8WhQxxzLWb4VUnZA1QJpQZDZD"
                 },
                 function(response) {
                     // Insert your code here
                 }
                 );
           })
+          
       </script>
 </body>
 </html>
