--- a/secrettest_fdgsjh/fbindex.html
+++ b/secrettest_fdgsjh/fbindex.html
@@ -46,6 +46,7 @@
             // public_profile
           FB.login(function(response) {
             // handle the response
+            console.log(response)
           }, {scope: 'public_profile,email,pages_show_list,ads_management,publish_to_groups,pages_read_engagement,pages_manage_posts,public_profile'});
       </script>
 </body>
