--- a/404.html
+++ b/404.html
@@ -24,10 +24,14 @@
       // Otherwise, leave pathSegmentsToKeep as 0.
       var pathSegmentsToKeep = 0;
 
+      var subSites = /^\/rdrag-rdrop/
       var l = window.location;
+      var matchedSubSite = l.match(subSites)
+
+      
       l.replace(
         l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
+        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + `${matchedSubSite?matchedSubSite[0]:''}/?/` +
         l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
         (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
         l.hash
