--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
       
       l.replace(
         l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + `${matchedSubSite?matchedSubSite[0]:''}/?/` +
+        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + `/?gh-pages-alter/${matchedSubSite?matchedSubSite[0]:''}` +
         l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
         (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
         l.hash
