--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
 
       var subSites = /^\/rdrag-rdrop/
       var l = window.location;
-      var matchedSubSite = l.match(subSites)
+      var matchedSubSite = l.pathname.match(subSites)
 
       
       l.replace(
