--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
       // https://username.github.io/repo-name/?/one/two&a=b~and~c=d#qwe
       // Otherwise, leave pathSegmentsToKeep as 0.
       var pathSegmentsToKeep = 0;
-
+        debugger
       var subSites = /^\/rdrag-rdrop/
       var l = window.location;
       var matchedSubSite = l.pathname.match(subSites)
