--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
         debugger
       var subSites = /^\/rdrag-rdrop/
       var l = window.location;
-      var matchedSubSite = l.pathname.match(subSites);
+      var matchedSubSite = null//l.pathname.match(subSites);
 
       
       l.replace(
