--- a/404.html
+++ b/404.html
@@ -27,15 +27,15 @@
       var subSites = /^\/rdrag-rdrop/
       var l = window.location;
       var matchedSubSite = null//l.pathname.match(subSites);
-
+    
       
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + `/?gh-pages-alter/${matchedSubSite?matchedSubSite[0]:''}` +
-        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
-      );
+    //   l.replace(
+    //     l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+    //     l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + `/?gh-pages-alter/${matchedSubSite?matchedSubSite[0]:''}` +
+    //     l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
+    //     (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+    //     l.hash
+    //   );
 
     </script>
   </head>
