--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-Greetings.
-<script src="https://cdn.jsdelivr.net/npm/recole"></script>
-<script>
-  let recole1 = new recole()
-</script>
-
-<script>
-
-let aa = recole1.createReactive({ value:"ccc" })
-recole1.watch(aa, ()=>{
-  console.log(aa.value)
-})
-aa.value = 'bbb' // console.log: "bbb"
-recole1.cancel(aa)
-aa.value = 'aaa' // not console.log: "aaa"
-</script>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="xxx" content="xxxxx"/><title>xxxxx</title><script defer="defer" src="/static/js/main.70e3234f.js"></script><link href="/static/css/main.073c9b0a.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
