--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="xxx"
-      content="xxxxx"
+      name="Atticstone.V2"
+      content="Atticstone.V2"
     />
-    <title>xxxxx</title>
+    <link rel="icon" href="%PUBLIC_URL%/Atticstone.svg">
+    <title>Atticstone.V2</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
