--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
     <div id="root" ></div>
     <div id="root-fix-header" ></div>
 
+    <script src="./d3.js"></script>
+    <script src="./d3-path-morphing.js"></script>
+
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-firestore.js"></script>
